# ling0

./: CMakeLists.txt  README.md
doc/: ling0.md
src/: CMakeLists.txt  Context.cpp  Context.h  Parser.cpp  Parser.h  VirtualMachine.cpp  VirtualMachine.h  grammar.h  main.cpp
src/ast/: Expression.h  Program.h  Statement.h
src/grammar/: expression.h  program.h
src_interpreter/: main.cpp
src_prompt/: main.cpp
tests/: arithmetics.l0  arithmetics.output  bindings1.l0  boolean.l0  boolean.output  empty_program.l0  hello_world.l0  if_expression.l0  log_interpolation.l0  log_interpolation.output
